--- a/services.html
+++ b/services.html
@@ -363,9 +363,32 @@
 
     </section>
 
-    <section class="kacko-data">
-        <div class="kacko-data__item">
+    <section class="container-mini">
+        <div class="my-32px">
             <h2 class="mb-3 text-semi-xl ">Ваши данные</h2>
+
+            <div class="data-table box-shadow-sm ">
+                <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">Полное имя:</h5>
+                    <h3 class="text-reg-base m-0 ">QO‘CHQOROV KOMOLJON MUXAMADJON O‘G‘LI</h3>
+                </div>
+                <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">Паспорт / ID карта:</h5>
+                    <h3 class="text-reg-base m-0 ">AB 0000001</h3>
+                </div>
+                <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">ПИНФЛ:</h5>
+                    <h3 class="text-reg-base m-0 ">42211650067832</h3>
+                </div>
+                <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">Номер телефона:</h5>
+                    <h3 class="text-reg-base m-0 ">+998(93)556-1293</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="my-32px mt-0">
+            <h2 class="mb-3 text-semi-xl ">Владелец транспортного средства</h2>
 
             <div class="data-table box-shadow-sm ">
                 <div class="data-table-row">
@@ -382,53 +405,38 @@
                 </div>
             </div>
         </div>
-        <div class="kacko-data__item">
+
+        <div class="my-32px mt-0">
             <h2 class="mb-3 text-semi-xl ">Информация о транспортном средстве</h2>
 
             <div class="data-table box-shadow-sm ">
                 <div class="data-table-row">
                     <h5 class="text-reg-sm m-0 ">Тип, марка и модель ТС:</h5>
-                    <h3 class="text-reg-base m-0 ">SPARK</h3>
+                    <h3 class="text-reg-base m-0 ">Легковые автомобили , SPARK</h3>
+                </div>
+                <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">Год изготовления:</h5>
+                    <h3 class="text-reg-base m-0 ">2020</h3>
                 </div>
                 <div class="data-table-row">
                     <h5 class="text-reg-sm m-0 ">Государственный <br> регистрационный номер:</h5>
                     <h3 class="text-reg-base m-0 ">01A001AA</h3>
                 </div>
                 <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">Номер кузова (шасси) ТС:</h5>
+                    <h3 class="text-reg-base m-0 ">XWBMA8311LA508706</h3>
+                </div>
+                <div class="data-table-row">
+                    <h5 class="text-reg-sm m-0 ">Номер двигателя ТС:</h5>
+                    <h3 class="text-reg-base m-0 ">B12D211290177HB9X0466</h3>
+                </div>
+                <div class="data-table-row">
                     <h5 class="text-reg-sm m-0 ">Технический паспорт:</h5>
-                    <h3 class="text-reg-base m-0 ">AAF 15000018</h3>
-                </div>
-            </div>
-        </div>
-        <div class="kacko-data__item">
-            <h2 class="mb-3 text-semi-xl ">Подтверждение информации</h2>
-
-            <div class="data-table box-shadow-sm ">
-                <div class="data-table-row">
-                    <h5 class="text-reg-sm m-0 ">Подписка оформляется на следующие к тарифам:</h5>
-                    <h3 class="text-reg-base m-0 ">SIMPLE</h3>
-                </div>
-                <div class="data-table-row">
-                    <h5 class="text-reg-sm m-0 ">Общая сумма подписки:</h5>
-                    <h3 class="text-reg-base m-0 ">150 000 сум</h3>
-                </div>
-                <div class="data-table-row">
-                    <h5 class="text-reg-sm m-0 ">Общий лимит возмещения:</h5>
-                    <h3 class="text-reg-base m-0 ">3 000 000 сум</h3>
+                    <h3 class="text-reg-base m-0 ">AAF 1567118 (28.01.2020)</h3>
                 </div>
             </div>
         </div>
 
-        <div class="data_navigation d-flex justify-content-between ">
-            <button class="data_prev d-flex gap-2 button-md align-items-center text-hover">
-                <img src="./icons/arrow-left-green.svg" alt="arrow-left" width="20px" height="20px">
-                <h4 class="text-semi-base m-0 ">Изменить данные</h4>
-            </button>
-            <button class="data_next button-primary button-md ">
-                Перейти к оплате
-                <img src="./icons/arrow-right-white.svg" alt="arrow-right">
-            </button>
-        </div>
     </section>
 
     <section class="kacko-payment">
@@ -474,7 +482,7 @@
         </div>
 
         <div class="data_navigation d-flex justify-content-between ">
-            <button class="data_prev d-flex gap-2 button-md align-items-center text-hover">
+            <button class="data_prev bg-transparent d-flex gap-2 button-md align-items-center text-hover">
                 <img src="./icons/arrow-left-green.svg" alt="arrow-left" width="20px" height="20px">
                 <h4 class="text-semi-base m-0 ">Изменить данные</h4>
             </button>
