--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="position-relative">
-        <img src="./images/Pattern.png" class="position-absolute z-index-1 start-0 top-0 w-md-100 " alt />
+        <img src="./images/Pattern.png" class="position-absolute z-index-1 start-0 top-0 w-100Mb " alt />
         <nav class="position-absolute top-0 start-0 end-0" id="myHeader">
             <div class="navbar__left">
                 <a href="./" class="navbar__logo">
@@ -222,8 +222,8 @@
 
 
         <div class="modal fade " id="navbar" tabindex="-1" aria-labelledby="navbarLabel" aria-hidden="true">
-            <div class="modal-dialog ">
-                <div class="modal-content m-2 p-4 ">
+            <div class="modal-dialog max-w-full d-block m-0 p-2 ">
+                <div class="modal-content p-4 ">
                     <div class="modal-header">
 
                         <a href="./" class="navbar__logo">
@@ -297,13 +297,10 @@
                                 </div>
                             </div>
 
-                            <div class=" ">
-
-                                <a href="./signIn.html" class="navbar__singIn box-shadow-sm">
-                                    <img src="./icons/user-square.svg" alt="user">
-                                    <span class="text-reg-sm ">Войти</span>
-                                </a>
-                            </div>
+                            <a href="./signIn.html" class="navbar__singIn justify-content-center box-shadow-sm w-100 ">
+                                <img src="./icons/user-square.svg" alt="user">
+                                <span class="text-reg-sm ">Войти</span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -1515,9 +1512,9 @@
 
     </section>
 
-    <section class="download_app container ">
+    <section class="download_app container-mini ">
         <div
-            class="download_app__box container-mini d-flex justify-content-center align-items-center flex-column-reverse flex-sm-row rounded-sm pt-3 position-relative ">
+            class="download_app__box px-1 d-flex justify-content-center align-items-center flex-column-reverse flex-sm-row rounded-sm pt-3 position-relative ">
 
             <img src="./icons/download-pattern.svg" alt="pattern"
                 class="position-absolute  top-0 start-0 w-100 z-0 d-none d-sm-block ">
@@ -1527,7 +1524,7 @@
                     <h3 class="text-semi-xl text-primary text-center text-sm-start m-0 z-1 ">Cкачай приложение</h3>
                     <h3 class="text-semi-xl z-1 text-center text-sm-start ">Доступно для Android и iOS</h3>
                 </div>
-                <div class="apps">
+                <div class="apps gap-sm-2 gap-1 ">
                     <div class="apps__item box-shadow-sm z-1 ">
                         <img src="./icons/apple.svg" alt="apple" width="21px" height="25px">
                         <div class="">
@@ -1738,7 +1735,7 @@
     <footer class="position-relative">
 
         <img src="./images/footer-pattern.png" alt="footer-pattern"
-            class="position-absolute start-0 bottom-0 z-n1 w-md-100">
+            class="position-absolute start-0 bottom-0 z-n1 w-100Mb">
 
         <div class="footer container ">
 
@@ -1770,7 +1767,7 @@
                     <a href="#" class="white-icon box-shadow-sm ">
                         <img src="./icons/telegram.svg" alt="telegram" class="m-0 p-0">
                     </a>
-                    <a href="#" class="white-icon box-shadow-sm ms-2 me-4 ">
+                    <a href="#" class="white-icon box-shadow-sm ms-sm-2 me-sm-4 ">
                         <img src="./icons/instagram.svg" alt="instagram">
                     </a>
                     <a href="#" class="button-primary button-md btn-footer d-flex gap-2 ">
