--- a/index.html
+++ b/index.html
@@ -1576,8 +1576,11 @@
 
             <div class="aboutUs__right col-xl-4 col-lg-4 ">
                 <div class="aboutUs__right__item w-100 ">
-                    <div class="icon-secondary">
-                        <img src="./icons/shield-star.svg" alt="sheild">
+                    <div class="">
+
+                        <div class="icon-secondary">
+                            <img src="./icons/shield-star.svg" alt="sheild">
+                        </div>
                     </div>
                     <div class="aboutUs__right__text">
                         <h5 class="text-semi-xl m-0 ">5 лет</h5>
@@ -1585,8 +1588,10 @@
                     </div>
                 </div>
                 <div class="aboutUs__right__item w-100 ">
-                    <div class="icon-secondary">
-                        <img src="./icons/users-group.svg" alt="users-group">
+                    <div class="">
+                        <div class="icon-secondary">
+                            <img src="./icons/users-group.svg" alt="users-group">
+                        </div>
                     </div>
                     <div class="aboutUs__right__text">
                         <h5 class="text-semi-xl m-0 ">170+ наших сотрудников</h5>
@@ -1596,8 +1601,10 @@
                     </div>
                 </div>
                 <div class="aboutUs__right__item w-100 ">
-                    <div class="icon-secondary">
-                        <img src="./icons/script.svg" alt="script">
+                    <div class="">
+                        <div class="icon-secondary">
+                            <img src="./icons/script.svg" alt="script">
+                        </div>
                     </div>
                     <div class="aboutUs__right__text">
                         <h5 class="text-semi-xl m-0 ">30 000+ полисов</h5>
@@ -1778,7 +1785,8 @@
                 </div>
             </div>
 
-            <div class=" footer__down d-flex justify-content-between flex-column flex-md-row row-gap-4 align-items-center ">
+            <div
+                class=" footer__down d-flex justify-content-between flex-column flex-md-row row-gap-4 align-items-center ">
                 <p class="text-reg-sm m-0 ">© EpolisPlus 2024. Все права защищены.</p>
 
                 <div class="d-flex justify-content-between flex-column flex-md-row align-items-center row-gap-2 gap-4 ">
