--- a/activate-code.html
+++ b/activate-code.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/breakpoints.css">
-    
+
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
             <ul class="navbar__links d-none d-lg-flex p-0 ">
                 <li class="">
-                    <a href="#" class="navbar__link text-hover ">
+                    <a href="/activate-code.html" class="navbar__link text-hover ">
                         <img src="./icons/shield-chevron.svg" alt="shield">
                         <h3 class="text-semi-base">Гарантийный код</h3>
                     </a>
@@ -127,7 +127,7 @@
 
                     <ul class="navbar__links d-flex flex-column p-0 align-items-center m-0 my-3 ">
                         <li class="">
-                            <a href="#" class="navbar__link text-hover ">
+                            <a href="/activate-code.html" class="navbar__link text-hover ">
                                 <img src="./icons/shield-chevron.svg" alt="shield">
                                 <h3 class="text-semi-base">Гарантийный код</h3>
                             </a>
@@ -202,7 +202,8 @@
                 <img src="./icons/shield-chevron.svg" alt="shield-chevron" class="w-100">
             </div>
             <h2 class="text-semi-4xl m-0 py-12px pt-0 text-center ">Активировать гарантийный код</h2>
-            <h2 class="text-reg-lg mb-0 text-center ">Введите код, чтобы активировать вашу автостраховку и получить полную защиту.
+            <h2 class="text-reg-lg mb-0 text-center ">Введите код, чтобы активировать вашу автостраховку и получить
+                полную защиту.
             </h2>
 
         </div>
