--- a/signIn.html
+++ b/signIn.html
@@ -26,7 +26,7 @@
 
             <ul class="navbar__links d-none d-lg-flex p-0 ">
                 <li class="">
-                    <a href="#" class="navbar__link text-hover ">
+                    <a href="/activate-code.html" class="navbar__link text-hover ">
                         <img src="./icons/shield-chevron.svg" alt="shield">
                         <h3 class="text-semi-base">Гарантийный код</h3>
                     </a>
@@ -127,7 +127,7 @@
 
                     <ul class="navbar__links d-flex flex-column p-0 align-items-center m-0 my-3 ">
                         <li class="">
-                            <a href="#" class="navbar__link text-hover ">
+                            <a href="/activate-code.html" class="navbar__link text-hover ">
                                 <img src="./icons/shield-chevron.svg" alt="shield">
                                 <h3 class="text-semi-base">Гарантийный код</h3>
                             </a>
@@ -185,10 +185,10 @@
                         </div>
 
 
-                            <a href="./signIn.html" class="navbar__singIn justify-content-center box-shadow-sm w-100 ">
-                                <img src="./icons/user-square.svg" alt="user">
-                                <span class="text-reg-sm ">Войти</span>
-                            </a>
+                        <a href="./signIn.html" class="navbar__singIn justify-content-center box-shadow-sm w-100 ">
+                            <img src="./icons/user-square.svg" alt="user">
+                            <span class="text-reg-sm ">Войти</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,8 @@
                     <img src="./icons/user-square-rounded.svg" alt="user-square-rounded" class="w-100">
                 </div>
                 <h2 class="text-semi-4xl m-0 py-12px pt-0 ">Вход</h2>
-                <h2 class="text-reg-lg mb-3 pb-3 text-center text-sm-start ">Введите свои данные для входа в аккаунт.</h2>
+                <h2 class="text-reg-lg mb-3 pb-3 text-center text-sm-start ">Введите свои данные для входа в аккаунт.
+                </h2>
 
                 <form class="d-flex flex-column gap-3 w-100 ">
 
@@ -232,7 +233,6 @@
                         <div class="position-relative">
                             <input type="password" class="form_input text-reg-base valid box-shadow-sm mt-1 w-100 "
                                 placeholder="Ваш пароль">
-                            <h6 class="text-reg-xs m-0  mt-1 error-message  ">Заполните поле</h6>
                             <i class="show-password show-eye "></i>
                         </div>
 
