--- a/signUp.html
+++ b/signUp.html
@@ -26,7 +26,7 @@
 
             <ul class="navbar__links d-none d-lg-flex p-0 ">
                 <li class="">
-                    <a href="#" class="navbar__link text-hover ">
+                    <a href="/activate-code.html" class="navbar__link text-hover ">
                         <img src="./icons/shield-chevron.svg" alt="shield">
                         <h3 class="text-semi-base">Гарантийный код</h3>
                     </a>
@@ -127,7 +127,7 @@
 
                     <ul class="navbar__links d-flex flex-column p-0 align-items-center m-0 my-3 ">
                         <li class="">
-                            <a href="#" class="navbar__link text-hover ">
+                            <a href="/activate-code.html" class="navbar__link text-hover ">
                                 <img src="./icons/shield-chevron.svg" alt="shield">
                                 <h3 class="text-semi-base">Гарантийный код</h3>
                             </a>
@@ -251,7 +251,6 @@
                     <input type="password"
                         class="form_input placeholder-text-gray text-reg-base valid box-shadow-sm mt-1 w-100 "
                         placeholder="Ваш пароль">
-                    <h6 class="text-reg-xs m-0  mt-1 error-message  ">Заполните поле</h6>
                     <i class="show-password show-eye "></i>
                 </div>
 
@@ -267,7 +266,6 @@
                     <input type="password"
                         class="form_input placeholder-text-gray text-reg-base valid box-shadow-sm mt-1 w-100 "
                         placeholder="Повторно введите пароль">
-                    <h6 class="text-reg-xs m-0  mt-1 error-message  ">Заполните поле</h6>
                     <i class="show-password show-eye "></i>
                 </div>
 
