--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <ul class="navbar__links d-none d-lg-flex p-0 ">
                     <li class="">
-                        <a href="#" class="navbar__link text-hover ">
+                        <a href="/activate-code.html" class="navbar__link text-hover ">
                             <img src="./icons/shield-chevron.svg" alt="shield">
                             <h3 class="text-semi-base">Гарантийный код</h3>
                         </a>
@@ -240,7 +240,7 @@
 
                         <ul class="navbar__links d-flex flex-column p-0 align-items-center m-0 my-3 ">
                             <li class="">
-                                <a href="#" class="navbar__link text-hover ">
+                                <a href="/activate-code.html" class="navbar__link text-hover ">
                                     <img src="./icons/shield-chevron.svg" alt="shield">
                                     <h3 class="text-semi-base">Гарантийный код</h3>
                                 </a>
@@ -707,7 +707,8 @@
                                 data-bs-target="#kackoModal">
                                 Подробнее
                             </button>
-                            <button class="button-primary box-shadow-sm py-2 ">Оформить</button>
+                            <a href="/kacko.html"
+                                class="button-primary box-shadow-sm py-2 w-50 d-flex justify-content-center ">Оформить</a>
 
                         </div>
                     </div>
@@ -764,7 +765,9 @@
                                 data-bs-target="#kackoModal">
                                 Подробнее
                             </button>
-                            <button class="button-primary box-shadow-sm py-2 ">Оформить</button>
+
+                            <a href="/kacko.html"
+                                class="button-primary box-shadow-sm py-2 w-50 d-flex justify-content-center ">Оформить</a>
                         </div>
                     </div>
                 </div>
@@ -828,7 +831,9 @@
                                 data-bs-target="#kackoModal">
                                 Подробнее
                             </button>
-                            <button class="button-primary box-shadow-sm py-2 ">Оформить</button>
+
+                            <a href="/kacko.html"
+                                class="button-primary box-shadow-sm py-2 w-50 d-flex justify-content-center ">Оформить</a>
                         </div>
                     </div>
                 </div>
@@ -891,7 +896,9 @@
                                 data-bs-target="#kackoModal">
                                 Подробнее
                             </button>
-                            <button class="button-primary box-shadow-sm py-2 ">Оформить</button>
+
+                            <a href="/kacko.html"
+                                class="button-primary box-shadow-sm py-2 w-50 d-flex justify-content-center ">Оформить</a>
                         </div>
                     </div>
                 </div>
@@ -1502,7 +1509,9 @@
                                 <img src="./icons/coins.svg" alt="coin">
                                 150 000 сум
                             </h4>
-                            <button class="button-primary box-shadow-sm w-100 py-2 ">Оформить</button>
+
+                            <a href="/services.html"
+                                class="button-primary box-shadow-sm py-2 w-100 d-flex justify-content-center ">Оформить</a>
 
                         </div>
                     </div>
