--- a/kacko.html
+++ b/kacko.html
@@ -26,7 +26,7 @@
 
             <ul class="navbar__links d-none d-lg-flex p-0 ">
                 <li class="">
-                    <a href="#" class="navbar__link text-hover ">
+                    <a href="/activate-code.html" class="navbar__link text-hover ">
                         <img src="./icons/shield-chevron.svg" alt="shield">
                         <h3 class="text-semi-base">Гарантийный код</h3>
                     </a>
@@ -127,7 +127,7 @@
 
                     <ul class="navbar__links d-flex flex-column p-0 align-items-center m-0 my-3 ">
                         <li class="">
-                            <a href="#" class="navbar__link text-hover ">
+                            <a href="/activate-code.html" class="navbar__link text-hover ">
                                 <img src="./icons/shield-chevron.svg" alt="shield">
                                 <h3 class="text-semi-base">Гарантийный код</h3>
                             </a>
